--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 test:
   override:
     - ./gradlew test
+    - ./gradlew gulp_build
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
