fix directory for running npm intall on ci

--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     version: oraclejdk8
 dependencies:
   override:
-    - npm install
+    - cd acceptance/ && npm install
 test:
   override:
     - ./gradlew test
