--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   java:
     version: oraclejdk8
+  node:
+    version: 0.12.0
 dependencies:
   override:
     - cd acceptance/ && npm install
